--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -18,12 +18,83 @@
 
 nav {
     grid-area: Nav-Bar;
-    background-color: blue;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav .left {
+    width: 20%;
+    height: 100%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+nav .left .burger {
+    padding-left: 20px;
+}
+nav .left .burger div {
+    width: 17px;
+    height: 1.8px;
+    background-color: grey;
+    margin: 4px;
+}
+nav .left img {
+    width: 50%;
+    padding-left: 20px;
+}
+nav .search-bar {
+    width: 60%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+nav .search-bar input {
+    width: 80%;
+    height: 50%;
+    border: 1px solid grey;
+    border-radius: 1px;
+}
+nav .search-bar img {
+    width: 4%;
+}
 
+nav .right {
+    width: 25%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+nav .right img {
+    padding: 10px;
+    margin-right: 7px;
+}
+nav .right .video-icon {
+    width: 12%;
+}
+nav .right .grid-view-icon {
+    width: 12%;
+}
+nav .right .settings-icon {
+    width: 12%;
+}
+
+nav .right button {
+    width: 40%;
+    height: 65%;
+    padding: 5px;
+    font-weight: bold;
+    color: blue;
+    border: 1px solid blue;
+    border-radius: 2px;
+    text-align: center;
+}
+.right button img {
+    width: 20%;
+}
 main {
     grid-area: Main;
     background-color: red;
