--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -29,70 +29,71 @@ nav {
     background-color: #fff;
 }
 
-nav .left {
+.left {
     width: 20%;
     height: 100%;
     display: flex;
     justify-content: left;
     align-items: center;
 }
-nav .left .burger {
+.left .burger {
     padding-left: 20px;
 }
-nav .left .burger div {
+.left .burger div {
     width: 17px;
     height: 1.8px;
     background-color: grey;
     margin: 4px;
 }
-nav .left img {
+.left img {
     width: 50%;
     padding-left: 20px;
 }
-nav .search-bar {
+.search-bar {
     width: 60%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-nav .search-bar input {
+.search-bar input {
     width: 80%;
     height: 50%;
     border: 1px solid grey;
     border-radius: 1px;
 }
-nav .search-bar img {
+.search-bar img {
     width: 4%;
 }
 
-nav .right {
+.right {
     width: 25%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-nav .right img {
+.right img {
     padding: 10px;
     margin-right: 7px;
 }
-nav .right .video-icon {
+.right .video-icon {
     width: 12%;
 }
-nav .right .grid-view-icon {
+.right .grid-view-icon {
     width: 12%;
 }
-nav .right .settings-icon {
+.right .settings-icon {
     width: 12%;
 }
 
-nav .right button {
+.right button {
     width: 40%;
     height: 65%;
     padding: 5px;
     font-weight: bold;
     color: blue;
+    background-color: #fff;
     border: 1px solid blue;
     border-radius: 2px;
     text-align: center;
@@ -114,18 +115,54 @@ iframe {
 
 .advert {
     grid-area: Advert;
-    background-color: yellow;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
+/*suggested videos section */ 
 .suggested-videos {
     grid-area: Suggested-Vids;
-    background-color: purple;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.video {
+    width: 100%;
+    height: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 5px;
+}
+.thumbnail {
+    width: 40%;
+    height: 100%;
+}
+.thumbnail img {
+    width: 100%;
+    height: 100%;
+}
+.suggested-vid-info {
+    width: 60%;
+    height: 100%;
+}
+.suggested-vid-info h2 {
+    font-family: 'Roboto', 'Arial', 'sans-serif';
+    color: #030303;
+    font-size: 1vw;
+    padding-left: 1vw;
+    padding-right: 4vw;
+    margin-bottom: 1vh;
+}
+.suggested-vid-info p {
+    font-family: 'Roboto', 'Arial', 'sans-serif';
+    color: #606060;
+    font-size: 0.9vw;
+    padding-left: 1vw;
+    padding-right: 4vw;
+    margin-bottom: 1vh;
+    
 }
 
 /* Video info */
