--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -113,12 +113,106 @@ iframe {
     align-self: flex-end;
 }
 
+/* advert */
 .advert {
     grid-area: Advert;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10%;
+    padding-bottom: 2vh;
+    border-bottom: 1px solid #c7c0c0;
+}
+.text {
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.text img {
+    width: 3%;
+    margin-left: 95%;
+
+}
+.text h2 {
+    font-family: 'Roboto', 'Arial', 'sans-serif';
+    color: #030303;
+    font-size: 1.5vw;
+}
+.text p {
+    font-family: 'Roboto', 'Arial', 'sans-serif';
+    color: #606060;
+    font-size: 0.9vw;
+}
+.links {
+    width: 100%;
+    height: 40%;
+    display: flex;
+}
+.picture {
+    width: 20%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.picture img {
+    width: 85%;
+}
+.website {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+}
+.website h2 {
+    font-family: 'Roboto', 'Arial', 'sans-serif';
+    color: #030303;
+    font-size: 1.5vw;
+    margin-bottom: 1vh;
+}
+.url-info {
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+.url-info button {
+    background-color: #FBC02D;
+    color: #FDF5FF;
+    border: none;
+    border-radius: 2px;
+    padding: 5px;
+    margin-right: 0.4vw;
+}
+.url-info p {
+    font-family: 'Roboto', 'Arial', 'sans-serif';
+    color: #606060;
+    font-size: 1vw;
+
+}
+
+.learn-more {
+    width: 30%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+.learn-more button {
+    font-family: 'Roboto', 'Arial', 'sans-serif';
+    font-size: 0/9vw;
+    padding: 1vw;
+    background-color: #065FD4;
+    color: #F9F9F9;
+    border: none;
+    border-radius: 2px;
+}
+
 /*suggested videos section */ 
 .suggested-videos {
     grid-area: Suggested-Vids;
@@ -126,6 +220,7 @@ iframe {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 2vh;
 }
 .video {
     width: 100%;
